--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 50%;
+    margin-left: 10%;
     gap: 16px;
 }
 
