--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
 
 body{
     font-family: 'Roboto Slab', serif;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 ul{
@@ -56,7 +59,6 @@ h1{
 .content-right{
     width: 400;
     height: auto;
-    margin: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,6 +87,8 @@ h1{
     display: flex;
     flex-direction: column;
     gap: 40px;
+    padding: 100px;
+    margin-top: -50px;
 }
 
 .picture{
@@ -96,4 +100,28 @@ h1{
 .info{
     display: flex;
     justify-content: space-around;
+}
+
+.third-section{
+    padding: 150px;
+    background-color: #e5e7eb;
+}
+
+.inspire{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote{
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.author{
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 315px;
 }
