--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,11 @@ h1{
     font-weight: bold;
     font-size: 18px;
 }
+
+.footer{
+    background-color: #1F2937;
+    color: #F9f8f8;
+    font-size: 18px;
+    padding: 40px;
+    text-align: center;
+}
